--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <script src="app.js"></script>
+    
 </head>
 <body>
-    <H1>THIS IS JAVA SCRIPT PRACTICE PAGE</H1>
-<input  "type="text" name = "answer">
+     <H1>THIS IS JAVA SCRIPT PRACTICE PAGE</H1>
+<!--<input  "type="text" name = "answer"> -->
 </body>
+<script src="app.js"></script>
 </html>
