--- a/Assignment 06/index.html
+++ b/Assignment 06/index.html
@@ -8,8 +8,9 @@
     
 </head>
 <body>
-     <H1>THIS IS JAVA SCRIPT PRACTICE PAGE</H1>
+     <H1>This is Assignment 06 page</H1>
 <!--<input  "type="text" name = "answer"> -->
 </body>
 <script src="app.js"></script>
+
 </html>
