--- a/Assignment 11 Quiz App/public/index.html
+++ b/Assignment 11 Quiz App/public/index.html
@@ -10,8 +10,10 @@
 
 </head>
 <body>
+    
     <div class="container col-md-8, col-lg-8, col-sm-8 outerbox text-center  " id = "outerbox">
-        <div class="startpage container col-md-8, col-lg-8, col-sm-12">
+        <h1 class = " app_head text-light mb-5 pb-5 col-12">Quiz<span class ="text-success">App</span></h1>
+        <div class="startpage container col-md-8, col-lg-8, col-sm-8">
             <h1 class = "text-light col-12">Enter Your Name</h1>
             <input class = "inputs" type="text" id = "user_name"> 
             <button class ="outerbox_btn" onclick ="show_innerbox()" id = "start">Start</button>
